--- a/slate.html
+++ b/slate.html
@@ -492,7 +492,7 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 </tbody></table>
 
       </div>
-      <div class="dark-box">
+      <div class="dark-box-off">
           <div class="lang-selector">
                 <a href="#" data-language-name="shell">shell</a>
                 <a href="#" data-language-name="ruby">ruby</a>
